# backend/controller/urls.py
@@ -15,7 +15,7 @@ urlpatterns = [
     path('profile/create/', create_profile, name='create_profile'), # POST
     path('profile/<str:user_id>/list/', get_user_profiles, name='get_user_profiles'), # GET
     path('profile/<str:profile_id>/data/', get_profile, name='get_profile'), # GET
-    path('profile/<str:profile_id>/coins/', coins, name='manage_coins'), # GET
+    path('profile/<str:profile_id>/coins/', coins, name='manage_coins'), # GET, PUT
     path('profile/<str:profile_id>/streak/', get_streak, name='get_streak'), # GET
     path('profile/shop/', shop, name='shop'), # GET
     path('profile/shop/<str:item_id>/', get_item, name='get_item'), # GET
