# backend/controller/views/profileViews.py
@@ -2,6 +2,7 @@ from rest_framework.decorators import api_view
 from rest_framework.response import Response
 from ..models import *
 from ..serializers import *
+from datetime import datetime
 
 @api_view(['POST'])
 def create_profile(request):
@@ -33,7 +34,9 @@ def create_profile(request):
 		name=name,
 		profile_picture=profile_picture,
 		pin_hash=pin_hash,
-		child_details=child_details
+		child_details=child_details,
+		coins=0,
+		streak=0
 	)
 
 	# Link profile to user
@@ -61,6 +64,26 @@ def get_user_profiles(request, user_id):
 	serializer = ProfileSerializer(profiles, many=True)
 	return Response(serializer.data, status=200)
 
+def calc_streak(profile):
+	completed_units = Exercise_Result.objects.filter(
+		child_profile=profile
+	).order_by('-completed_at')
+	if not completed_units.exists():
+		profile.streak = 0
+		profile.save()
+		return
+	now = datetime.now()
+	streak = 0
+	for result in completed_units:
+		completion_date = result.completed_at
+		delta_days = (now.date() - completion_date.date()).days
+		if delta_days == streak + 1:
+			streak += 1
+		else:
+			break
+	profile.streak = streak
+	profile.save()
+
 
 @api_view(['GET'])
 def get_profile(request, profile_id):
@@ -69,19 +92,37 @@ def get_profile(request, profile_id):
     except Profile.DoesNotExist:
         return Response({'error': 'Profile not found'}, status=404)
 
+    calc_streak(profile)
+
     serializer = ProfileSerializer(profile)
     return Response(serializer.data, status=200)
 
 
-@api_view(['GET'])
+@api_view(['GET', 'PUT'])
 def coins(request, profile_id):
-    try:
-        profile = Profile.objects.get(id=profile_id)
-    except Profile.DoesNotExist:
-        return Response({'error': 'Profile not found'}, status=404)
-    return Response({
-          'coins':profile.coins
-	}, status=200)
+	try:
+		profile = Profile.objects.get(id=profile_id)
+	except Profile.DoesNotExist:
+		return Response({'error': 'Profile not found'}, status=404)
+	if request.method == 'GET':
+		return Response({
+			'coins':profile.coins
+		}, status=200)
+	if request.method == 'PUT':
+		amount = request.data.get('amount')
+		if amount is None:
+			return Response({'error':'Amount is required'}, status=400)
+		try:
+			amount = int(amount)
+		except ValueError:
+			return Response({'error':'Amount must be an integer'}, status=400)
+		if amount < 0:
+			return Response({'error':'Can not add negative coins'}, status=401)
+		profile.coins += amount
+		profile.save()
+		return Response({
+			'coins':profile.coins
+		}, status=200)
 
 
 @api_view(['GET'])
